project2/test/test_2_r01.out
Error type 1 at line 5: x3 variable is used without definition
