project2/test/test_2_r01.out2
Error type 1 at Line 5: x3 variable is used without definition
Error type 7 at Line 5: unsupported type of operands for arithmatic operator
Error type 5 at Line 5: unmatching types on both sides of assignment operator (=)
